<resources>
    <string name="app_name">Sensor Setup Program</string>
    <string name="txt_allreports">All Reports</string>
    <string name="txt_pause">Pause Posting</string>
    <string name="txt_resume">Resume Posting</string>
    <string name="txt_update">Update</string>
    <string name="txt_shutdown">Shutdown</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_network_settings">Network Settings</string>
    <string name="txt_ssid">SSID</string>
    <string name="txt_password">Password</string>
    <string name="txt_send">Send</string>
    <string name="ssid_message">Please enter network SSID</string>
    <string name="pass_message">Please enter network Password</string>
    <string name="sensors">Sensor #</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="product_hint">Products</string>
    <string name="department_store">Department Store</string>

    <string-array name="dept_array">
        <item>Apparel</item>
        <item>Beauty</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Home Improvement</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>
</resources>