<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DashboardActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_blue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Commands"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/menu"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="05dp"
        android:layout_marginRight="05dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_allReports"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_allreports"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_pause"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_resume"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:id="@+id/btn_layout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/btn_layout1"
        android:layout_marginLeft="05dp"
        android:layout_marginRight="05dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_update"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_shutdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_shutdown"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txt_clear"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_4"
        android:layout_below="@+id/btn_layout2"
        android:layout_marginLeft="05dp"
        android:layout_marginRight="05dp"
        android:background="@drawable/background">

        <LinearLayout
            android:id="@+id/tree_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="10dp"
                android:text="@string/sensors"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="10dp"
                android:text="@string/value"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tree_heading"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/divider"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/department"
                android:layout_alignParentRight="true"
                android:text="@string/add"
                android:visibility="gone" />

            <EditText
                android:id="@+id/product"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/department"
                android:layout_alignBaseline="@id/add"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/add"
                android:ems="10"
                android:hint="@string/product_hint"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product"
                android:layout_alignParentLeft="true"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/department_store"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <ExpandableListView
                android:id="@+id/myList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textView1" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="05dp"
        android:layout_marginLeft="05dp"
        android:layout_marginRight="05dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_network_settings"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/network_ssd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/background"
                android:fontFamily="sans-serif-light"
                android:hint="@string/txt_ssid"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/network_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/background"
                android:fontFamily="sans-serif-light"
                android:hint="@string/txt_password"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_click"
                android:text="@string/txt_send"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>